// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Article fragment matches snapshot 1`] = `
<DocumentFragment>
  <article>
    <header>
      <h2
        class="text-xl text-blue-700 font-semibold"
      >
        <a
          href="/article/1"
        >
          First Post
        </a>
      </h2>
    </header>
    <div
      class="mt-2 text-gray-900 font-light"
    >
      Neutra tacos hot chicken prism raw denim, put a bird on it enamel pin post-ironic vape cred DIY. Street art next level umami squid. Hammock hexagon glossier 8-bit banjo. Neutra la croix mixtape echo park four loko semiotics kitsch forage chambray. Semiotics salvia selfies jianbing hella shaman. Letterpress helvetica vaporware cronut, shaman butcher YOLO poke fixie hoodie gentrify woke heirloom.
    </div>
    <div>
      Loading...
    </div>
    <div>
      Posted at: 2022-03-30T00:00:00.000Z
    </div>
  </article>
</DocumentFragment>
`;

exports[`Article fragment when summary prop set to false matches snapshot 1`] = `
<DocumentFragment>
  <article>
    <header>
      <h2
        class="text-xl text-blue-700 font-semibold"
      >
        <a
          href="/article/1"
        >
          First Post
        </a>
      </h2>
    </header>
    <div
      class="mt-2 text-gray-900 font-light"
    >
      Neutra tacos hot chicken prism raw denim, put a bird on it enamel pin post-ironic vape cred DIY. Street art next level umami squid. Hammock hexagon glossier 8-bit banjo. Neutra la croix mixtape echo park four loko semiotics kitsch forage chambray. Semiotics salvia selfies jianbing hella shaman. Letterpress helvetica vaporware cronut, shaman butcher YOLO poke fixie hoodie gentrify woke heirloom.
    </div>
    <div>
      Loading...
    </div>
    <div>
      Posted at: 2022-03-30T00:00:00.000Z
    </div>
  </article>
</DocumentFragment>
`;

exports[`Article fragment when summary prop set to true matches snapshot 1`] = `
<DocumentFragment>
  <article>
    <header>
      <h2
        class="text-xl text-blue-700 font-semibold"
      >
        <a
          href="/article/1"
        >
          First Post
        </a>
      </h2>
    </header>
    <div
      class="mt-2 text-gray-900 font-light"
    >
      Neutra tacos hot chicken prism raw denim, put a bird on it enamel pin post-ironic vape cred DIY. Str...
    </div>
    <div>
      Posted at: 2022-03-30T00:00:00.000Z
    </div>
  </article>
</DocumentFragment>
`;
